--- a/test/fixtures/properties.yml
+++ b/test/fixtures/properties.yml
@@ -2,8 +2,9 @@
 
 one:
   title: MyString
-  body: MyText
+  description: MyText
 
 two:
   title: MyString
-  body: MyText
+  description: MyText
+
